// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useFills Should re-render the fill when updating the props 1`] = `
<div
  data-number={43}
  id="test-fill"
>
  Im a Fill
</div>
`;

exports[`useFills Should remind to specify the slot name if called without arguments 1`] = `null`;

exports[`useFills Should render the fills in the order of priority 1`] = `
Array [
  <div
    data-number={43}
    id="test-fill"
  >
    Im a Fill
  </div>,
  <div
    data-number={42}
    id="test-fill"
  >
    Im a Fill
  </div>,
]
`;

exports[`useFills Should return [] when state.fills.[].library is not specified 1`] = `null`;

exports[`useFills Should return [] when the state.fills.[].slot is not specified 1`] = `null`;

exports[`useFills Should skip rendering the fills with value \`false\` 1`] = `
<div
  data-number={1}
  id="test-fill"
>
  Im a Fill
</div>
`;

exports[`useFills Should work in the most basic case 1`] = `
<div
  data-number={42}
  id="test-fill"
>
  Im a Fill
</div>
`;

exports[`useFills Should work when \`state.fills\` is missing 1`] = `null`;

exports[`useFills Should work when the slot does not exist and should show a warning 1`] = `null`;
